# armbian-gateway

./: .gitignore  BUILD_ARM64.md  CHANGELOG.md  Dockerfile.cross-arm64  README.md  build_arm64.sh  config-test.yaml  config.yaml  r2s-geteway.cabal  test-mqtt.hs
app/: Main.hs
src/Gateway/: API.hs  Config.hs  Database.hs  MQTT.hs  Serial.hs  Types.hs
