cabal-version:      3.0
name:               r2s-geteway
version:            0.1.0.0
synopsis:           R2S IoT gateway — serial, MQTT, SQLite, HTTP API
license:            BSD-3-Clause
license-file:       LICENSE
author:             liliya
maintainer:         1651884738@qq.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-unused-do-bind

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:
        Gateway.Types
        Gateway.Config
        Gateway.Serial
        Gateway.MQTT
        Gateway.Database
        Gateway.API
    build-depends:
        base             >= 4.18  && < 5
      , aeson            >= 2.1
      , async            >= 2.2
      , bytestring       >= 0.11
      , conduit-extra    >= 1.3
      , network-uri      >= 2.6
      , net-mqtt         >= 0.8
      , serialport       >= 0.5
      , servant-server   >= 0.20
      , sqlite-simple    >= 0.4
      , stm              >= 2.5
      , text             >= 2.0
      , time             >= 1.12
      , warp             >= 3.3
      , yaml             >= 0.11

executable r2s-geteway
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    -- ghc-options:      -O2 -optl-static -optl-pthread    
    build-depends:
        base             >= 4.18 && < 5
      , r2s-geteway
      , async            >= 2.2
      , stm              >= 2.5
      , time             >= 1.12

executable test-mqtt
    import:           warnings
    main-is:          test-mqtt.hs
    default-language: Haskell2010
    ghc-options:      -threaded
    -- ghc-options: -O2 -optl-static -optl-pthread
    build-depends:
        base             >= 4.18 && < 5
      , bytestring       >= 0.11
      , conduit-extra     >= 1.3
      , net-mqtt         >= 0.8
      , text             >= 2.0
